--- a/XamarinCommunityToolkitSample/Pages/Views/StateLayoutPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Views/StateLayoutPage.xaml
@@ -39,8 +39,7 @@
                            FontSize="14" Margin="0,8,0,16" HorizontalOptions="Center" HorizontalTextAlignment="Center" />
 
                     <Button Command="{Binding CycleStatesCommand}" IsVisible="{Binding CurrentState, Converter={StaticResource StateToBooleanConverter}, ConverterParameter={x:Static state:State.None}}"
-                            Text="Cycle All States" CornerRadius="20" HeightRequest="40" BackgroundColor="#1a81bc"
-                            TextColor="White" Margin="0,0,0,16" />
+                            Text="Cycle All States" Margin="0,0,0,16" />
 
                     <StackLayout Padding="10" state:StateLayout.CurrentState="{Binding CurrentState}"
                                  state:StateLayout.CurrentCustomStateKey="{Binding CustomState}" BackgroundColor="#f0f1f2">
@@ -94,8 +93,7 @@
                     <Label Text="Smack a loader on any Layout control in Xamarin.Forms." FontSize="14" Margin="0,8,0,16"
                            HorizontalOptions="Center" HorizontalTextAlignment="Center" />
 
-                    <Button Command="{Binding FullscreenLoadingCommand}" Text="Show Fullscreen Loader" CornerRadius="20"
-                            HeightRequest="40" BackgroundColor="#a94e4e" TextColor="White" Margin="0,0,0,16" />
+                    <Button Command="{Binding FullscreenLoadingCommand}" Text="Show Fullscreen Loader" Margin="0,0,0,16" />
 
                     <BoxView HeightRequest="1" BackgroundColor="#cccccc" Margin="0,16" />
 
